db: RANGE-partition messages, replace per-message statuses with watermarks
- rewrite Flyway migrations (V1-V9): messages partitioned by RANGE(created_at)
  with monthly partitions + default; ensure_message_partitions() and a scheduler
- participants: last_delivered_message_id/at watermark; drop message_statuses
  (no more per-recipient fan-out on send)
- derive delivery/read status and unread counts from watermarks
- add FK integrity, dedupe indexes, fix chats.created_by NOT NULL vs ON DELETE SET NULL
- exclude own messages from unread counts
- tests: watermark-based MessageStatusServiceIT, new MessagePartitionIT